2001-07-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.cc, ibuf8.cc: minor changes to allow compile on Be
	* listfiles.cc: implemented U7ListFiles on Be
	* Makefile.be, beos/exult.rsrc: updated

2001-07-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: palette-cycle 248-541 too
	* various: re-added Hack-mover mode (Alt-H)

2001-07-16  Ryan Nunn <triforce@merlin.net.au>
	* usecode/intrinsics.cc: Modified si_path_run_usecode to fix the, to
	  quote WJP, "most important part of SI" aka the Figidazzi sex scene.

2001-07-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Spellbook_gump.cc: added missing reagents, corrected order
	* various: s/reagants/reagents/

2001-07-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: palette-cycle 244-247 too
	* scale.cc: merged Maciej Kalisiak's bilinear scaler patch. Thanks!

2001-07-15  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: read() now calls setup_game(), removing some
	duplicated code.
	* EStudio: Show 'face' and allow setting by dropping from
	shape-browser.
	* EStudio: Stop time when map-editing.
	* Added "Play/test" toggle button to main EStudio window.

2001-07-14  Jeff Freedman  <jeff@amy.nerble.net>

	* Name changes:  Chunk_object_list -> Map_chunk.
	gwin->get_objects() -> gwin->get_chunk().

2001-07-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* egg.cc: #include cheat.h not only for XWIN
	* font.cc: check for NULL shape in get_text_width()
	* objs.cc: more SI object names

2001-07-13  Jeff Freedman  <jeff@amy.nerble.net>

	* actorio.cc:  Save/restore face_num.

2001-07-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Paperdoll_gump_info.cc: fixed Gwani cloak bug
	* mapedit/Makefile.am: possible fix for slighty incompatible 'make'

2001-07-12  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc, actors.cc: Start schedule even if NPC is not within
	world.  Fixes SI Moonshade-kidnap bug.
	
	* Exult Studio now has a 'save map' option.  Files are stored in