@@ -1,3 +1,9 @@
+2001-07-18  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Testing with EFence:  Fixed a couple memory bugs, including one
+	during the voyage of Hawk's ship.
+	* ExultStudio:  Added 'Read map', 'Reload usecode' commands.
+
 2001-07-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* gamewin.cc, ibuf8.cc: minor changes to allow compile on Be
 	* listfiles.cc: implemented U7ListFiles on Be
